--- a/style.css
+++ b/style.css
@@ -6,3 +6,17 @@ body{
 a{
     text-decoration: none;
 }
+
+.container{
+    width: 1170px;
+    padding: 0px 15px;
+    margin: 0px auto;
+}
+
+.top-wrapper{
+    padding-top: 180px;
+    padding-bottom: 100px;
+    background-image: url(https://prog-8.com/images/html/advanced/top.png);
+    color: white;
+    background-size: cover;
+}
