ボタンを作成

--- a/style.css
+++ b/style.css
@@ -30,3 +30,32 @@ a{
 .top-wrapper p{
     opacity: 0.7px;
 }
+
+
+.btn{
+    padding: 8px 24px;
+    color: white;
+    display :inline-block;
+    opacity: 0.8;
+}
+
+.sigup{
+    background-color:#239b76;
+}
+
+.facebook{
+    background-color: #3b5998;
+    margin-right: 10px;
+}
+
+.twitter{
+    background-color: #55acee;
+}
+
+.btn-wrapper{
+    margin: 20px 0px;
+}
+
+.btn-wrapper p{
+    margin: 10px;
+}
