--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a{
     background-image: url(https://prog-8.com/images/html/advanced/top.png);
     color: white;
     background-size: cover;
+    text-align: center;
 }
 
 .top-wrapper h1{
@@ -28,7 +29,7 @@ a{
 }
 
 .top-wrapper p{
-    opacity: 0.7px;
+    opacity: 0.7;
 }
 
 
@@ -37,6 +38,11 @@ a{
     color: white;
     display :inline-block;
     opacity: 0.8;
+    border-radius: 4px;
+}
+
+.btn:hover{
+    opacity: 1;
 }
 
 .signup{
