ヘッダー追加

--- a/style.css
+++ b/style.css
@@ -69,3 +69,13 @@ a{
 fa{
     margin-right: 5px;
 }
+
+header{
+    height: 65px;
+    background-color: rgba(34, 49, 52, 0.9);
+}
+
+.logo{
+    width: 124px;
+    margin-right:20px;
+}
