--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a{
     margin: 10px;
 }
 
-fa{
+.fa{
     margin-right: 5px;
 }
 
@@ -77,5 +77,5 @@ header{
 
 .logo{
     width: 124px;
-    margin-top:20px;
+    margin-top: 20px;
 }
