--- a/style.css
+++ b/style.css
@@ -15,12 +15,26 @@ a{
 
 header{
     height: 65px;
+    width: 100px;
     background-color: rgba(34, 49, 52, 0.9);
 }
 
 .logo{
     width: 124px;
     margin-top: 20px;
+}
+
+.header-left{
+    float: left;
+}
+
+.header-right{
+    float: right;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.header-right:hover{
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .top-wrapper{
