--- a/style.css
+++ b/style.css
@@ -100,3 +100,19 @@ header{
 .fa{
     margin-right: 5px;
 }
+
+.lesson-wrapper{
+    height: 500px;
+    padding-bottom: 80px;
+    background-color: #f7f7f7;
+}
+
+.heading{
+    padding-top: 60px;
+    padding-bottom: 30px;
+    color: #5f5d60;
+}
+
+.heading h2{
+    font-weight: normal;
+}
