--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ header{
     height: 500px;
     padding-bottom: 80px;
     background-color: #f7f7f7;
+    text-align: center;
 }
 
 .heading{
@@ -120,4 +121,15 @@ header{
 .lesson{
     float: left;
     width: 25%;
+}
+
+.lesson-icon{
+    position: relative;
+}
+
+.lesson-icon p{
+    position: absolute;
+    top: 90px;
+    width: 100%;
+    color: white;
 }
