レッスン部分の説明文を追加

--- a/style.css
+++ b/style.css
@@ -133,3 +133,11 @@ header{
     width: 100%;
     color: white;
 }
+
+.text-contents{
+    width: 80px;
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 12px;
+    color: #b3aeb5;
+}
