レッスン部分の説明文の誤り修正

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header{
     color: white;
 }
 
-.text-contents{
+.txt-contents{
     width: 80px;
     display: inline-block;
     margin-top: 20px;
