--- a/style.css
+++ b/style.css
@@ -143,9 +143,16 @@ header{
     color: #b3aeb5;
 }
 
+.message-wrapper{
+    border-bottom: 1px solid #eee;
+    padding-bottom: 80px;
+    text-align: center;
+}
+
 .message{
     background-color: #5dca88;
     padding: 15px 40px;
+    box-shadow: 0px 7px #1a7940;
 }
 
 .heading h3{
