--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ header{
     box-shadow: 0px 7px #1a7940;
 }
 
-.message: active{
+.message: active{  /*Progateの通りに入力したがクリック時にへこむ動作が見られない…。*/
     box-shadow: none;
     position: relative;
     top: 7px;
